<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_marginTop="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="4dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_widget"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:scaleType="centerCrop"
                android:src="@drawable/explore"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/image_widget">

                <TextView
                    android:id="@+id/textName_widget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:text="@string/hello_blank_fragment"/>
                <TextView
                    android:id="@+id/textDescription_widget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/hello_blank_fragment"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="8dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp">
                <TextView
                    android:id="@+id/textRating_widget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textRatingNumber_widget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_number"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="20dp" />


            </LinearLayout>



        </RelativeLayout>

    </android.support.v7.widget.CardView>



</RelativeLayout>








